# offchain-metadata-server

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  client.py
src/: api.rs  lib.rs  main.rs
src/server/: api.rs  mod.rs  registry.rs
tests/: health_check.rs
