[package]
name = "tokenapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tokenapi"

[dependencies]
actix-web = "4"
env_logger = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
actix-settings = "0.6.0"

[dev-dependencies]
reqwest = "0.11"
