[package]
name = "tokenapi"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Schmidt <manuel.schmidt@cardanofoundation.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tokenapi"

[dependencies]
actix-web = "4"
actix-rt = "1.1.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
actix-settings = "0.6.0"
env_logger = "0.9"
log = "0.4"
chrono = "0.4.28"
tokio_schedule = "0.3.1"

[dev-dependencies]
reqwest = "0.11"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"